--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "axios": "^1.4.0",
+    "bootstrap": "^4.6.2",
+    "jquery": "^3.7.0",
+    "popper.js": "^1.16.1",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.2"
+    "vue-router": "^4.2.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
